--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,2 @@
-PORT=4000
-ACCESS_KEY=jdhfuhwrbvndxkck38748uifjdncnkxkcmkxmck
-REFRESH_KEY=ndsfuhgifsdknvmnxnzkxcmaowkrend3949304
+PORT=4001
+BASE_URL=http://localhost:3000
