--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,9 @@
     "start": "node index.js"
   },
   "keywords": [],
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
